# jobs-intelligence

./: CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  neon-hosted-refresh.yml
.plans/: career-pathfinder-engine.md  counterfactual-career-delta-engine-plan-v2.md  postgres.md
data/: mcf_jobs.db-shm
docker/: backend.Dockerfile  bootstrap-data.sh  nginx.conf
docs/: neon-oracle-hosted-deploy.md
output/playwright/: capture_readme_screenshots.mjs
scripts/: benchmark.py  run_docker_onnx_smoke.sh
src/: cli.py
src/api/: app.py  models.py
src/frontend/: README.md  package-lock.json  package.json
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/components/: ActiveFiltersBar.tsx  CompanySearch.tsx  DegradedBanner.tsx  FilterPanel.tsx  JobCard.tsx  JobList.tsx  RelatedSkillsGraph.tsx  SearchBar.tsx  SearchStats.tsx  SimilarJobsModal.tsx  SkeletonCard.tsx  SkillCloud.tsx  TrendSparkline.tsx
src/frontend/src/contexts/: ThemeContext.tsx
src/frontend/src/hooks/: useHotkeys.ts  useTheme.ts  useUrlFilters.ts
src/frontend/src/pages/: MatchLabPage.tsx  OverviewPage.tsx  (+2 more)
src/frontend/tests/: matchLab.phase4.test.mjs
src/legacy/: mycareersfuture.py  mycareersfuture_links.py  mycareersfuture_list.py
src/mcf/: __init__.py  adaptive_rate.py  api_client.py  batch_logger.py  career_delta.py  career_delta_retrieval.py  daemon.py  database.py  db_backup.py  db_protocols.py  db_target.py  dual_write.py  historical_scraper.py  hosted_slice.py  industry_taxonomy.py  market_stats.py  migration.py  models.py  pg_database.py  postgres_migration.py  scraper.py  storage.py
src/mcf/embeddings/: __init__.py  backends.py  generator.py  index_manager.py  models.py  pgvector_backend.py  query_expander.py  search_engine.py  vector_backend.py
tests/: conftest.py  factories.py  test_api_app.py  test_api_middleware.py  test_api_models.py  test_benchmark_script.py  test_career_delta.py  test_career_delta_integration.py  test_career_delta_retrieval.py  test_cli_daemon.py  test_cli_db_resolution.py  test_cli_embedding_defaults.py  test_company_centroids.py  test_database.py  test_db_target.py  test_dual_write.py  test_embedding_backends.py  test_factories.py  test_index_manager.py  test_industry_taxonomy.py  test_integration.py  test_market_intelligence.py  test_market_stats.py  test_models.py  test_postgres_migration.py  test_query_expander.py  test_search_engine.py
(+33 files in other folders)
